--- a/User.Service/User.Service.Infra/User.Service.Infra.csproj
+++ b/User.Service/User.Service.Infra/User.Service.Infra.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DataContext\" />
+    <Folder Include="Services\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
