--- a/User.Service/User.Service.Shared/User.Service.Shared.csproj
+++ b/User.Service/User.Service.Shared/User.Service.Shared.csproj
@@ -9,4 +9,8 @@
     <Folder Include="Settings\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Flunt" Version="1.0.5" />
+  </ItemGroup>
+
 </Project>
