--- a/User.Service/User.Service.Domain/User.Service.Domain.csproj
+++ b/User.Service/User.Service.Domain/User.Service.Domain.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Flunt" Version="1.0.5" />
+  </ItemGroup>
+
 </Project>
