--- a/User.Service/User.Service.Domain/User.Service.Domain.csproj
+++ b/User.Service/User.Service.Domain/User.Service.Domain.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
+    <Folder Include="Commands\Input\" />
+    <Folder Include="Commands\Result\" />
     <Folder Include="Entities\" />
     <Folder Include="Mapping\ItemsWeb\" />
     <Folder Include="Enum\" />
