--- a/User.Service/User.Service.Domain/User.Service.Domain.csproj
+++ b/User.Service/User.Service.Domain/User.Service.Domain.csproj
@@ -5,7 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\Input\" />
     <Folder Include="Commands\Result\" />
     <Folder Include="Entities\" />
     <Folder Include="Mapping\ItemsWeb\" />
@@ -18,6 +17,10 @@
 
   <ItemGroup>
     <PackageReference Include="Flunt" Version="1.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\User.Service.Shared\User.Service.Shared.csproj" />
   </ItemGroup>
 
 </Project>
